# NaturalVirtualInterationServer

./: .gitignore  CMakeLists.txt  IKWeights.in
include/NVI/: calibration.h  core.h  decoder.h  encoder.h  http-server.h  utilities.h
include/NVI/core/: HandJoints.hpp  HandPoseEstimator.h  ImageProcessor.h  InverseKinematics.h  OneEuroFilter.h  OpenPose.h  Utils.h  YoloHandFinder.h
include/NVI/decoder/: Decoder.h
include/NVI/encoder/: Encoder.h
include/NVI/http-server/: JsonConvertions.h
include/NVI/utilities/: Debug.h
src/: CMakeLists.txt
src/NVI/: CMakeLists.txt
src/NVI/calibration/: CMakeLists.txt  CameraCalibration.cpp
src/NVI/core/: CMakeLists.txt  HeatmapsFromVecLayer.cpp  ImageProcessor.cpp  InverseKinematics.cpp  OneEuroFilter.cpp  OpenPose.cpp  Utils.cpp  YoloHandFinder.cpp
src/NVI/decoder/: CMakeLists.txt  Decoder.cpp
src/NVI/encoder/: CMakeLists.txt  Encoder.cpp
src/NVI/http-server/: CMakeLists.txt  JsonConvertions.cpp  main.cpp
src/NVI/local-run/: CMakeLists.txt  main.cpp
src/NVI/utilities/: CMakeLists.txt  Debug.cpp
